Criação do projeto, implementação da home, footer e navbar, instalação do bootstrap e fontawesome

--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,4 +1,10 @@
-p {
-    font-size: 500px;
-    color: #085554;
+.parallax{
+    background-image: url('https://thumbs.dreamstime.com/b/new-skills-knowledge-webinar-training-business-internet-technology-concept-new-skills-knowledge-webinar-training-business-internet-121274023.jpg');
+
+    min-height: 500px;
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
