--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<p>Home</p>
+<div class="container w-100">
+
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="text-monospace text-center" >Bem vindes</h1>
+        </div>
+    </div>
+
+    <div class="row w-100 mt-4 mb-4">
+        <div class="col-md-12">
+            <p class="text-justify text-monospace" >
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat error, molestias dicta facilis illo quae aliquam voluptatum temporibus, vero omnis, ipsa praesentium similique laboriosam maiores. Vitae soluta odit unde. Labore.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis alias doloribus provident facere quisquam consequatur nemo enim odio et ad aliquid soluta ab veritatis, dolor numquam earum reprehenderit quibusdam autem?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex facere explicabo ipsa debitis commodi similique laudantium veniam pariatur perspiciatis architecto distinctio ipsam, incidunt praesentium? Amet perferendis maxime iure suscipit ex.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus facilis excepturi itaque sunt harum debitis officiis sapiente minima temporibus, ratione quis rem unde dicta, eaque quidem qui laborum impedit facere.
+            </p>
+        </div>
+    </div>
+</div>
+
+    <div class="parallax" ></div>
+    <div class="row w-100 mt-5 mb-5">
+        <div class="col-md-12 w-100 d-flex justify-content-center">
+            <button class="btn btn-outline-dark text-uppercase font-weight-bold" >Ver o feed</button>
+        </div>
+    </div>
+
