--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -40,10 +40,10 @@
 
       <nav class="d-flex justify-content-center">
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-          <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-home-tab" data-toggle="tab"
+          <a class="nav-item nav-link active text-light font-weight-bold bg-info" id="nav-home-tab" data-toggle="tab"
             href="#minhas-postagens" role="tab" aria-controls="nav-home" aria-selected="true">Minhas Postagens
           </a>
-          <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-profile-tab" data-toggle="tab"
+          <a class="nav-item nav-link text-light font-weight-bold bg-info" id="nav-profile-tab" data-toggle="tab"
             href="#postagens-temas" role="tab" aria-controls="nav-profile" aria-selected="false">Postagens por Tema
           </a>
         </div>
@@ -57,18 +57,18 @@
               <input class="form-control w-100" type="search" placeholder="Pesquisar Postagem" aria-label="Pesquisar">
             </div>
             <div class="col-md-2 pl-0">
-              <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+              <button class="btn btn-outline-info w-100" type="button">Pesquisar</button>
             </div>
           </div>
         </div>
 
-        <div class="tab-pane fade show" id="postagens-temas" role="tabpanel" aria-labelledby="nav-postagens-tab">
+        <div class="tab-pane fade show " id="postagens-temas" role="tabpanel" aria-labelledby="nav-postagens-tab">
           <div class="row mt-3 mb-3">
             <div class="col-md-10 pr-0">
-              <input class="form-control w-100" type="search" placeholder="Pesquisar Postagem" aria-label="Pesquisar">
+              <input class="form-control w-100" type="search" placeholder="Pesquisar Tema" aria-label="Pesquisar">
             </div>
             <div class="col-md-2 pl-0">
-              <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+              <button class="btn btn-outline-info w-100" type="button">Pesquisar</button>
             </div>
           </div>
         </div>
