--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -9,10 +9,10 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <!--o 'a' é onde comporta os nomes da navbar-->
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" routerLink="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" href="#">Feed</a>
+              <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" routerLink="/feed" >Feed</a>
             </li>
           </ul>
         </div>
