Aplicação do consumo da API em cadastrar, login e segurança

--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .parallax{
-    background-image: url('https://thumbs.dreamstime.com/b/new-skills-knowledge-webinar-training-business-internet-technology-concept-new-skills-knowledge-webinar-training-business-internet-121274023.jpg');
+    background-image: url('https://www.microtool.de/wp-content/uploads/2017/04/disruptive-innovation.jpg');
 
     min-height: 500px;
 
