--- a/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogPessoal/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     </div>
     
     <div class="card-body">
-      <h5 class="card-title text-center text-monospace">Monique Oliveira</h5>
+      <h5 class="card-title text-center text-monospace">{{nome}}</h5> <!--chaves indica interpolação com o TS-->
       <p class="card-text text-center text-monospace">Estudante da 6ª turma da Generation Brasil, acredito que tecnologia é a ponte para resolver todos os problemas.</p>
       <a href="https://www.linkedin.com/in/moniquejr-oliveira/" target="_blank" class="btn btn-outline-info mb-3 d-flex justify-content-center">LinkedIn</a>
       <a href="https://github.com/moniquejro" target="_blank" class="btn btn-outline-dark d-flex justify-content-center">GitHub</a>
