--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="col-md-8">
-      <h3 class="text-center mb-4 text-monospace">Como tem sido minha experiência na Generation?</h3>
+      <h3 class="text-center mb-4 text-monospace">Como tem sido sua experiência na Generation?</h3>
 
       <div class="form-group">
         <label class="text-monospace" for="titulo">Título:</label>
@@ -57,7 +57,7 @@
               <input class="form-control w-100" type="search" placeholder="Pesquisar Postagem" aria-label="Pesquisar">
             </div>
             <div class="col-md-2 pl-0">
-              <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+              <button class="btn btn-outline-info w-100" type="button">Pesquisar</button>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
               <input class="form-control w-100" type="search" placeholder="Pesquisar Tema" aria-label="Pesquisar">
             </div>
             <div class="col-md-2 pl-0">
-              <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+              <button class="btn btn-outline-info w-100" type="button">Pesquisar</button>
             </div>
           </div>
         </div>
