Implementando metodo POST

--- a/blogPessoal/src/app/navbar/navbar.component.html
+++ b/blogPessoal/src/app/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             
             <div *ngIf='auth.btnSair()'>
               <li class="nav-item">
-                <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" (click)='sair()' >Sair</a>
+                <a class="nav-link texto text-monospace text-uppercase font-weight-bold p-3" href="#" (click)='sair()' >Sair</a>
               </li>
             </div>            
           </ul>
