--- a/blogPessoal/src/app/contato/contato.component.html
+++ b/blogPessoal/src/app/contato/contato.component.html
@@ -1,37 +1,60 @@
 <body class="" style="padding-right: 0px;">
-    <div class="container mb-5 mt-5">
-        <div class="row mb-5">
-            <div class="col-md-12 d-flex justify-content-center">
-                <h1>Como está sendo sua experiência?</h1>
+    <form>
+        <div class="form-row">
+          <div class="col-md-6 mb-3">
+            <label for="validationServer01">First name</label>
+            <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required>
+            <div class="valid-feedback">
+              Looks good!
             </div>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="validationServer02">Last name</label>
+            <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-4 d-flex justify-content-center">
-                <h5>Tranquilo</h5>
+        <div class="form-row">
+          <div class="col-md-6 mb-3">
+            <label for="validationServer03">City</label>
+            <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+            <div id="validationServer03Feedback" class="invalid-feedback">
+              Please provide a valid city.
             </div>
-            <div class="col-md-4 d-flex justify-content-center">
-                <h5>Bom, mas com problemas</h5>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="validationServer04">State</label>
+            <select class="custom-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+              <option selected disabled value="">Choose...</option>
+              <option>...</option>
+            </select>
+            <div id="validationServer04Feedback" class="invalid-feedback">
+              Please select a valid state.
             </div>
-            <div class="col-md-4 d-flex justify-content-center">
-                <h5>Precisa melhorar</h5>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="validationServer05">Zip</label>
+            <input type="text" class="form-control is-invalid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
+            <div id="validationServer05Feedback" class="invalid-feedback">
+              Please provide a valid zip.
             </div>
+          </div>
         </div>
-        <div class="card bg-dark text-white border-0">
-            <div class="row">
-                <div class="col-md-4 tm bg-success d-flex justify-content-center rounded-left"></div>
-                <div class="col-md-4 tm bg-warning d-flex justify-content-center rounded-left"></div>
-                <div class="col-md-4 tm bg-danger d-flex justify-content-center rounded-left"></div>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+            <label class="form-check-label" for="invalidCheck3">
+              Agree to terms and conditions
+            </label>
+            <div  id="invalidCheck3Feedback" class="invalid-feedback">
+              You must agree before submitting.
             </div>
-            <div class="card-img-overlay">
-                <div class="row mt-5">
-                    <div class="col-md-12 p-0">
-                        <input type="range" name="vol" value="0" min="0" max="100" class="w-100 form-control-range ng-untouched ng-pristine ng-valid">
-                        <br _ngcontent-ecw-c52>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
+        <button class="btn btn-primary" type="submit">Submit form</button>
+      </form>
 </body>
 
 
