--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -10,18 +10,21 @@
 
       <div class="form-group">
         <label class="text-monospace" for="titulo">Título:</label>
-        <input type="text" class="form-control" id="titulo" placeholder="Digite aqui o seu título">
+        <input type="text" class="form-control" id="titulo" placeholder="Digite aqui o seu título"
+        [(ngModel)]="postagem.titulo">
       </div>
 
       <div class="form-group">
         <label class="text-monospace" for="texto">Texto:</label>
-        <textarea class="form-control" id="texto" cols="30" rows="3" placeholder="Digite aqui o seu texto"></textarea>
+        <textarea class="form-control" id="texto" cols="30" rows="3" 
+        placeholder="Digite aqui o seu texto" [(ngModel)]="postagem.texto"></textarea>
       </div>
 
       <div class="row d-flex align-items-end">
+        
         <div class="col-md-6">
           <div class="form-group m-0">
-            <label class="text-monospace" for="tema">Escolha um tema ou <a href="">Cadastre um
+            <label class="text-monospace" for="tema">Escolha um tema ou <a routerLink="/cadastro-tema">Cadastre um
                 novo</a></label>
             <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
               <option *ngFor="let item of listaTemas" value={{item.id}} >
@@ -32,7 +35,7 @@
         </div>
 
         <div class="col-md-6 d-flex justify-content-end">
-          <button type="button" class="btn btn-outline-info w-25">Publicar</button>
+          <button type="button" class="btn btn-outline-info w-25" (click)="publicar()" >Publicar</button>
         </div>
       </div>
 
@@ -64,7 +67,7 @@
           <div class="row">
             <div class="col-md-12">
 
-              <div class="card mt-5 mb-5" *ngFor="let item of listaPostagens"  >
+              <div class="card mt-5 mb-5" *ngFor="let item of listaPostagens | orderBy : key : reverse "  >
                 <div class="card-header">
                     <div class="row d-flex align-items-center">
                         <div class="col-md-8">
@@ -103,6 +106,8 @@
             <div class="col-md-2 pl-0">
               <button class="btn btn-outline-info w-100" type="button">Pesquisar</button>
             </div>
+
+            
           </div>
         </div>
       </div>
