--- a/blogPessoal/src/app/contato/contato.component.html
+++ b/blogPessoal/src/app/contato/contato.component.html
@@ -1,60 +1,43 @@
-<body class="" style="padding-right: 0px;">
-    <form>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationServer01">First name</label>
-            <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationServer02">Last name</label>
-            <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationServer03">City</label>
-            <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-            <div id="validationServer03Feedback" class="invalid-feedback">
-              Please provide a valid city.
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationServer04">State</label>
-            <select class="custom-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-              <option selected disabled value="">Choose...</option>
-              <option>...</option>
-            </select>
-            <div id="validationServer04Feedback" class="invalid-feedback">
-              Please select a valid state.
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationServer05">Zip</label>
-            <input type="text" class="form-control is-invalid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-            <div id="validationServer05Feedback" class="invalid-feedback">
-              Please provide a valid zip.
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
-            <label class="form-check-label" for="invalidCheck3">
-              Agree to terms and conditions
-            </label>
-            <div  id="invalidCheck3Feedback" class="invalid-feedback">
-              You must agree before submitting.
-            </div>
-          </div>
-        </div>
-        <button class="btn btn-primary" type="submit">Submit form</button>
-      </form>
-</body>
+<div class="container">
+  <div class="row mt-5 mb-5">
+    <div class="col-md-12 ">
+      <div class="card">
+
+        <h1 class="text-monospace text-center mt-5">Envie uma mensagem</h1>
 
 
+        <div class="row mb-5 mt-5 d-flex justify-content-center">
+          <div class="col-md-8">
+            <div>
+              <div class="form-group">
+                <label class='text-monospace' for="nome">Nome</label>
+                <input  class="form-control" placeholder="Digite seu nome completo">
+              </div>
+
+              <div class="form-group">
+                <label class='text-monospace' for="email">E-mail</label>
+                <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com">
+              </div>
+
+              <div class="form-group">
+                <label class='text-monospace'for="assunto">Assunto</label>
+                <input type="password" class="form-control" placeholder="Digite o assunto aqui">
+              </div>
+
+              <div class="form-group">
+                <label class="text-monospace" for="texto">Texto:</label>
+                <textarea class="form-control" id="texto" cols="30" rows="3" placeholder="Digite aqui o seu texto"
+                  ></textarea>
+              </div>
+
+              <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-success w-25">Enviar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
